Add new endpoint for personalisation data
